--- a/appMenu.html
+++ b/appMenu.html
@@ -1,19 +1,13 @@
 <ul class="nav flex-column">
     <li class="nav-item">
-        <h6 class="text-white">AngualrJS Application Structure</h6>
-
-    </li>
-
-    <li class="nav-item mt-3">
-        <h6 class="text-white">Controller $ Scope</h6> 
-    </li>
-
-    <li class="nav-item mt-3">
-        <h6 class="text-white">View $ Data Binding</h6> 
-
-    </li>
-
-    <li class="nav-item mt-3">
-        <h6 class="text-white">Model & Service</h6> 
+        <h6 class="text-white"></h6>
+        <a class="nav-link text-warning" href="/#!/home">HOME</a>
+        <a class="nav-link text-warning" href="/#!/">회원관리</a>
+        <a class="nav-link text-warning" href="/#!/">주문관리</a>
+        <a class="nav-link text-warning" href="/#!/">상품관리</a> 
+        <a class="nav-link text-warning" href="/#!/">리뷰관리</a> 
+        <a class="nav-link text-warning" href="/#!/">제품QnA</a> 
+        <a class="nav-link text-warning" href="/#!/">커뮤니티QnA</a> 
+        <a class="nav-link text-warning" href="/#!/notice_list">공지사항관리</a> 
     </li>
 </ul>
