--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <script src="appRoute.js"></script>
     
     <script src="controllers/loginController.js"></script>
+    <script src="controllers/noticeController.js"></script>
 
-    
     <script src="services/loginService.js"></script>
+    <script src="services/noticeService.js"></script>
 
 </head>
 <!-- <body ng-app="app">-->
