--- a/appMenu.html
+++ b/appMenu.html
@@ -8,6 +8,6 @@
         <a class="nav-link text-warning" href="/#!/">리뷰관리</a> 
         <a class="nav-link text-warning" href="/#!/">제품QnA</a> 
         <a class="nav-link text-warning" href="/#!/">커뮤니티QnA</a> 
-        <a class="nav-link text-warning" href="/#!/notice_list">공지사항관리</a> 
+        <a class="nav-link text-warning" href="/#!/notice">공지사항관리</a> 
     </li>
 </ul>
