--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     
     <script src="controllers/loginController.js"></script>
     <script src="controllers/noticeController.js"></script>
+    <script src="controllers/productController.js"></script>
 
     <script src="services/loginService.js"></script>
     <script src="services/noticeService.js"></script>
+    <script src="services/productService.js"></script>
+    
 
 </head>
 <!-- <body ng-app="app">-->
