--- a/appMenu.html
+++ b/appMenu.html
@@ -4,7 +4,7 @@
         <a class="nav-link text-warning" href="/#!/home">HOME</a>
         <a class="nav-link text-warning" href="/#!/">회원관리</a>
         <a class="nav-link text-warning" href="/#!/">주문관리</a>
-        <a class="nav-link text-warning" href="/#!/">상품관리</a> 
+        <a class="nav-link text-warning" href="/#!/product">상품관리</a> 
         <a class="nav-link text-warning" href="/#!/">리뷰관리</a> 
         <a class="nav-link text-warning" href="/#!/">제품QnA</a> 
         <a class="nav-link text-warning" href="/#!/">커뮤니티QnA</a> 
