--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group">
       <label>이메일:</label>
-      <input class="form-control" value="{{notice.bdate | date:'yyyy.MM.dd'}}" readonly/>
+      <input class="form-control" value="{{uemail}}" readonly/>
     </div>
   </div>
 </div>
